infra/finance-ui.pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: finance-ui
spec:
  containers:
  - name: finance-ui
    image: techwithshubh/finance-ui
    imagePullPolicy: Never
