infra/finance-ui.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-ui-deployment
  labels:
    app: finance-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-ui
  template:
    metadata:
      labels:
        app: finance-ui
    spec:
      containers:
      - name: finance-ui
        image: techwithshubh/finance-ui
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: finance-ui-service
spec:
  selector:
    app: finance-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
