infra/finance-ui.nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: finance-ui-service
spec:
  type: NodePort
  selector:
    app: finance-ui
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
