infra/finance-ui.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-finance-ui-service
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finance-ui-service
            port:
              number: 80
  ingressClassName: nginx
